change result page layout, navigation functionality and styling

--- a/confirmation.html
+++ b/confirmation.html
@@ -45,7 +45,7 @@
                             <div class="navbar-header">
                                 <a class="navbar-brand" href="/"><img class="logo" src="assets/img/logo.png"></a>
                             </div>
-                            <button type="button" class="btn btn-default pull-right">Chat with us</button>
+                            <a role="buttom" type="button" class="btn btn-default chat-button">Chat with us</a>
                             <!-- /.navbar-collapse -->
                         </div>
                         <!-- /.container -->
