--- a/index.html
+++ b/index.html
@@ -115,31 +115,33 @@
                     <a href="loan-types.html" title="find a loan" class="button-large">Find a loan</a>
                 </div>
             </section>
-            <section class="container secondary-hero">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h3>Identify a Business Loan</h3>
-                        <h4>Get $5,000 - $500,000 in 2 days</h4>
+            <section class="container">
+                <div class="secondary-hero">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h3>Identify a Business Loan</h3>
+                            <h4>Get $5,000 - $500,000 in 2 days</h4>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 col-sm-4 box">
-                        <!-- <div class="number-circle">1</div> -->
-                        <h5>Your Business</h5>
-                        <p>has unique lending needs. Find the loan type that best fits those needs.</p>
-                        <a href="#" title="learn more" class="button-medium">Learn more <i class="fa  fa-caret-right"></i></a>
-                    </div>
-                    <div class="col-xs-12 col-md-4 col-sm-4 box">
-                        <!-- <div class="number-circle">2</div> -->
-                        <h5>Sageworks Lending</h5>
-                        <p>identifies the perfect loan alternatives for your business.</p>
-                        <a href="how-we-help.html" title="read more" class="button-medium">Show how we help <i class="fa  fa-caret-right"></i></a>
-                    </div>
-                    <div class="col-xs-12 col-md-4 col-sm-4 box">
-                        <!-- <div class="number-circle">3</div> -->
-                        <h5>Your Industry</h5>
-                        <p>peers have a major impact on your ability to get a loan. See how you compare.</p>
-                        <a href="#" title="read more" class="button-medium">Compare to industry <i class="fa  fa-caret-right"></i></a>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 col-sm-4 box">
+                            <!-- <div class="number-circle">1</div> -->
+                            <h5>Your Business</h5>
+                            <p>has unique lending needs. Find the loan type that best fits those needs.</p>
+                            <a href="#" title="learn more" class="button-medium">Learn more <i class="fa  fa-caret-right"></i></a>
+                        </div>
+                        <div class="col-xs-12 col-md-4 col-sm-4 box">
+                            <!-- <div class="number-circle">2</div> -->
+                            <h5>Sageworks Lending</h5>
+                            <p>identifies the perfect loan alternatives for your business.</p>
+                            <a href="how-we-help.html" title="read more" class="button-medium">Show how we help <i class="fa  fa-caret-right"></i></a>
+                        </div>
+                        <div class="col-xs-12 col-md-4 col-sm-4 box">
+                            <!-- <div class="number-circle">3</div> -->
+                            <h5>Your Industry</h5>
+                            <p>peers have a major impact on your ability to get a loan. See how you compare.</p>
+                            <a href="#" title="read more" class="button-medium">Compare to industry <i class="fa  fa-caret-right"></i></a>
+                        </div>
                     </div>
                 </div>
             </section>
