--- a/loan-results.html
+++ b/loan-results.html
@@ -45,7 +45,7 @@
                             <div class="navbar-header">
                                 <a class="navbar-brand" href="/"><img class="logo" src="assets/img/logo.png"></a>
                             </div>
-                            <button type="button" class="btn btn-default pull-right">Chat with us</button>
+                            <a role="buttom" type="button" class="btn btn-default chat-button">Chat with us</a>
                             <!-- /.navbar-collapse -->
                         </div>
                         <!-- /.container -->
@@ -109,168 +109,49 @@
                                 <div class="col-xs-12">
                                     <div class="container-fluid">
                                         <div class="row">
-                                            <div class="list-header">
+                                            <div class="list-header col-xs-12">
                                                 <h1>Business Term Loan</h1>
                                             </div>
-                                            <div class="list-group">
-                                                <a href="#" class="list-group-item">
-                                                    <div class="media col-sm-3">
-                                                        <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
-                                                        </figure>
-                                                    </div>
-                                                    <div class="col-sm-2">
-                                                        <h4 class="list-group-item-heading"> Montly Cost </h4>
-                                                        <ul>
-                                                            <li>6% - 8% &lt; $150k</li>
-                                                            <li>4% - 6% &lt; $150k</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-2 text-center">
-                                                        <h4 class="list-group-item-heading">Origination Fee</h4>
-                                                        <ul>
-                                                            <li>$500</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-3">
-                                                        <h4 class="list-group-item-heading">Description</h4>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
-                                                    </div>
-                                                    <div class="col-sm-1">
-                                                        <button type="button" class="btn btn-primary btn-lg"> Select</button>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                            <div class="list-header">
-                                                <h1>Equipment Loan</h1>
-                                            </div>
-                                            <div class="list-group">
-                                                <a href="#" class="list-group-item">
-                                                    <div class="media col-sm-3">
-                                                        <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
-                                                        </figure>
-                                                    </div>
-                                                    <div class="col-sm-2">
-                                                        <h4 class="list-group-item-heading"> Montly Cost </h4>
-                                                        <ul>
-                                                            <li>6% - 8% &lt; $150k</li>
-                                                            <li>4% - 6% &lt; $150k</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-2 text-center">
-                                                        <h4 class="list-group-item-heading">Origination Fee</h4>
-                                                        <ul>
-                                                            <li>$500</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-3">
-                                                        <h4 class="list-group-item-heading">Description</h4>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
-                                                    </div>
-                                                    <div class="col-sm-1">
-                                                        <button type="button" class="btn btn-primary btn-lg"> Select</button>
+                                            <div class="list-group col-xs-12">
+                                                <a href="#" class="list-group-item lender-list">
+                                                    <div class="row">
+                                                        <div class="col-sm-4">
+                                                            <figure>
+                                                                <img class="img-responsive" src="http://placehold.it/360x120" alt="logo">
+                                                                <figcaption>Lender name</figcaption>
+                                                            </figure>
+                                                        </div>
+                                                        <div class="col-sm-8">
+                                                            <div class="row">
+                                                                <div class="col-xs-6 col-sm-4">
+                                                                    <h4 class="list-group-item-heading">Monthly Cost</h4>
+                                                                    <ul>
+                                                                        <li>$900 - $1,255</li>
+                                                                    </ul>
+                                                                </div>
+                                                                <div class="col-xs-6 col-sm-4">
+                                                                    <h4 class="list-group-item-heading">Origination Fee</h4>
+                                                                    <ul>
+                                                                        <li>$475</li>
+                                                                    </ul>
+                                                                </div>
+                                                                <div class="col-sm-2">
+                                                                    <input type="checkbox" class="chk-button">
+                                                                    <label data-loanid="">Select</label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-sm-12">
+                                                                    <h4 class="list-group-item-heading">Description</h4>
+                                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed maximus scelerisque nisi, quis aliquet tellus consequat eget. Curabitur a lacinia sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </a>
                                             </div>
-                                            <div class="list-header">
-                                                <h1>Merchant Cash Advance</h1>
-                                            </div>
-                                            <div class="list-group">
-                                                <a href="#" class="list-group-item">
-                                                    <div class="media col-sm-3">
-                                                        <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
-                                                        </figure>
-                                                    </div>
-                                                    <div class="col-sm-2">
-                                                        <h4 class="list-group-item-heading"> Montly Cost </h4>
-                                                        <ul>
-                                                            <li>6% - 8% &lt; $150k</li>
-                                                            <li>4% - 6% &lt; $150k</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-2 text-center">
-                                                        <h4 class="list-group-item-heading">Origination Fee</h4>
-                                                        <ul>
-                                                            <li>$500</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-3">
-                                                        <h4 class="list-group-item-heading">Description</h4>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
-                                                    </div>
-                                                    <div class="col-sm-1">
-                                                        <button type="button" class="btn btn-primary btn-lg"> Select</button>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                            <div class="list-header list-hints">
+                                            <div class="list-header col-xs-12 list-hints">
                                                 <h2>Other potential loans you qualify for</h2>
-                                            </div>
-                                            <div class="list-header">
-                                                <h1>Invoice Factoring</h1>
-                                            </div>
-                                            <div class="list-group">
-                                                <a href="#" class="list-group-item">
-                                                    <div class="media col-sm-3">
-                                                        <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
-                                                        </figure>
-                                                    </div>
-                                                    <div class="col-sm-2">
-                                                        <h4 class="list-group-item-heading"> Montly Cost </h4>
-                                                        <ul>
-                                                            <li>6% - 8% &lt; $150k</li>
-                                                            <li>4% - 6% &lt; $150k</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-2 text-center">
-                                                        <h4 class="list-group-item-heading">Origination Fee</h4>
-                                                        <ul>
-                                                            <li>$500</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-3">
-                                                        <h4 class="list-group-item-heading">Description</h4>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
-                                                    </div>
-                                                    <div class="col-sm-1">
-                                                        <button type="button" class="btn btn-primary btn-lg"> Select</button>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                            <div class="list-header">
-                                                <h1>Working Capital Facility</h1>
-                                            </div>
-                                            <div class="list-group">
-                                                <a href="#" class="list-group-item">
-                                                    <div class="media col-sm-3">
-                                                        <figure class="pull-left">
-                                                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x150" alt="logo">
-                                                        </figure>
-                                                    </div>
-                                                    <div class="col-sm-2">
-                                                        <h4 class="list-group-item-heading"> Montly Cost </h4>
-                                                        <ul>
-                                                            <li>6% - 8% &lt; $150k</li>
-                                                            <li>4% - 6% &lt; $150k</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-2 text-center">
-                                                        <h4 class="list-group-item-heading">Origination Fee</h4>
-                                                        <ul>
-                                                            <li>$500</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-3">
-                                                        <h4 class="list-group-item-heading">Description</h4>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
-                                                    </div>
-                                                    <div class="col-sm-1">
-                                                        <button type="button" class="btn btn-primary btn-lg"> Select</button>
-                                                    </div>
-                                                </a>
                                             </div>
                                         </div>
                                     </div>
