confirmation page changes/ result email form

--- a/confirmation.html
+++ b/confirmation.html
@@ -67,24 +67,34 @@
                         </div>
                         <div class="col-xs-12">
                             <div class="col-xs-12 col-md-6">
-                                <h5>The following lenders will be contacting you to discuss your loan options:</h5>
-                                <ul class="loan-list">
-                                    <li>
-                                        <a href="#"><img class="media-object img-rounded img-responsive" src="http://placehold.it/120x60" alt="logo"> LendingClub.com </a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><img class="media-object img-rounded img-responsive" src="http://placehold.it/120x60" alt="logo"> OnDeck.com </a>
-                                    </li>
-                                </ul>
+                                <div class="info-box">
+                                    <h5>The following lenders will be contacting you to discuss your loan options:</h5>
+                                    <ul class="loan-list">
+                                        <li>
+                                            <a href="#"><img class="img-responsive" src="http://placehold.it/120x60" alt="logo"> LendingClub.com </a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img class="img-responsive" src="http://placehold.it/120x60" alt="logo"> OnDeck.com </a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img class="img-responsive" src="http://placehold.it/120x60" alt="logo"> LendingClub.com </a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img class="img-responsive" src="http://placehold.it/120x60" alt="logo"> LendingClub.com </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="col-xs-12 col-md-6">
-                                <h5>To expedite loan approval, be prepared to provide the following information to lenders:</h5>
-                                <ul class="requirement-list">
-                                    <li>The 2 most recent business tax returns</li>
-                                    <li>Past 3 months’ business bank statements</li>
-                                    <li>A copy of your Income Statement</li>
-                                    <li>A copy of your Balance Sheet</li>
-                                </ul>
+                                <div class="info-box">
+                                    <h5>To expedite loan approval, be prepared to provide the following information to lenders:</h5>
+                                    <ul class="requirement-list">
+                                        <li>The 2 most recent business tax returns</li>
+                                        <li>Past 3 months’ business bank statements</li>
+                                        <li>A copy of your Income Statement</li>
+                                        <li>A copy of your Balance Sheet</li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="col-xs-12">
                                 <h5>A confirmation email has been sent to [jon.gacioch@sageworks.com], along with your complimentary Sageworks Business Analysis Report.</h5>
