--- a/business-analysis-report.html
+++ b/business-analysis-report.html
@@ -27,7 +27,7 @@
             <script src="assets/js/vendor/jquery-1.10.2.min.js"></script>
             <script src="assets/js/vendor/jquery-ui-1.8.12.min.js"></script>
             <!-- Wizard-->
-            <!-- <script src="assets/js/vendor/jquery.wizard.js"></script> -->
+            <script src="assets/js/vendor/jquery.wizard.js"></script>
             <!-- Radio and checkbox styles -->
             <script src="assets/js/check_radio/jquery.icheck.js"></script>
             <!-- HTML5 and CSS3-in older browsers-->
@@ -36,71 +36,87 @@
             <script src="assets/js/vendor/respond.min.js"></script>
         </head>
         <body>
-            <section id="top-area" class="bg-color">
+            <section id="top-area" class="striped-bg">
                 <header>
                     <!-- Navigation -->
                     <nav class="navbar navbar-default" role="navigation">
                         <div class="container">
                             <!-- Brand and toggle get grouped for better mobile display -->
                             <div class="navbar-header">
+                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                </button>
                                 <a class="navbar-brand" href="/"><img class="logo" src="assets/img/logo.png"></a>
                             </div>
-                            <a role="button" type="button" class="btn btn-default chat-button">Chat with us</a>
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav">
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Loan Types">loan types<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="business-term-loan.html"> business term loan</a>
+                                            </li>
+                                            <li>
+                                                <a href="equipment-loan.html"> equipment loan</a>
+                                            </li>
+                                            <li>
+                                                <a href="merchant-cash-advance.html"> merchant cash advance</a>
+                                            </li>
+                                            <li>
+                                                <a href="invoice-factoring.html"> invoice factoring</a>
+                                            </li>
+                                            <li>
+                                                <a href="working-capital-facility.html"> working capital facility</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="How We Help">how we help<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="how-we-help.html"> how we help</a>
+                                            </li>
+                                            <li>
+                                                <a href="about.html"> about us</a>
+                                            </li>
+                                            <li>
+                                                <a href="contact.html"> contact us</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Resources">resources<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="business-analysis-report.html"> business analysis report</a>
+                                            </li>
+                                            <li>
+                                                <a href="knowledge-center.html"> knowledge center</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <div class="btn-group pull-right">
+                                    <a role="button" href="loan-types.html" type="button" class="btn btn-primary">Find a loan</a>
+                                    <a role="button" href="#" type="button" class="btn btn-default">Chat with us</a>
+                                </div>
+                            </div>
                             <!-- /.navbar-collapse -->
                         </div>
                         <!-- /.container -->
                     </nav>
                 </header>
+                <div class="cta-hero">
+                </div>
             </section>
-            <section class="container">
-                <div class="info-container">
-                    <div class="row">
-                        <div class="col-xs-12 main-title">
-                            <h3>Submission confirmation.</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="confirmation-header">
-                                <h2>The lender(s) you selected will reach out within 24 hours.</h2>
-                            </div>
-                        </div>
-                        <div class="col-xs-12">
-                            <div class="col-xs-12 col-md-6">
-                                <div class="info-box">
-                                    <h5>The following lenders will be contacting you to discuss your loan options:</h5>
-                                    <ul class="loan-list">
-                                        <li>
-                                            <a href="#"><img class="img-responsive" src="http://placehold.it/120x60" alt="logo"> LendingClub.com </a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><img class="img-responsive" src="http://placehold.it/120x60" alt="logo"> OnDeck.com </a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><img class="img-responsive" src="http://placehold.it/120x60" alt="logo"> LendingClub.com </a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><img class="img-responsive" src="http://placehold.it/120x60" alt="logo"> LendingClub.com </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-xs-12 col-md-6">
-                                <div class="info-box">
-                                    <h5>To expedite loan approval, be prepared to provide the following information to lenders:</h5>
-                                    <ul class="requirement-list">
-                                        <li>The 2 most recent business tax returns</li>
-                                        <li>Past 3 months’ business bank statements</li>
-                                        <li>A copy of your Income Statement</li>
-                                        <li>A copy of your Balance Sheet</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-xs-12">
-                                <h5>A confirmation email has been sent to [jon.gacioch@sageworks.com], along with your complimentary Sageworks Business Analysis Report.</h5>
-                            </div>
-                        </div>
-                    </div>
+            <section id="main-area" class="striped-bg">`
+                <div class="cta-hero">
+                    <h2>Sageworks Lending understands your<br>Business needs.</h2>
+                    <a href="how-we-help.html" title="how we help">See how we can help!</a>
                 </div>
             </section>
             <footer>
@@ -153,19 +169,19 @@
                 </section>
             </footer>
             <div id="toTop">Back to Top</div>
-        <!-- VENDOR JS -->
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        <script src="assets/js/vendor/jquery.validate.js"></script>
-        <script src="assets/js/vendor/jquery.placeholder.js"></script>
-        <script src="assets/js/vendor/jquery.tweet.min.js"></script>
-        <script src="assets/js/vendor/jquery.bxslider.min.js"></script>
-        <script src="assets/js/vendor/quantity-bt.js"></script>
-        <script src="assets/js/vendor/retina.js"></script>
-        <script src="assets/js/vendor/owl.carousel.min.js"></script>
-        <script src="assets/js/vendor/functions.js"></script>
-        <!-- FANCYBOX -->
-        <script src="assets/js/vendor/fancybox/source/jquery.fancybox.pack.js?v=2.1.4" type="text/javascript"></script>
-        <script src="assets/js/vendor/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.5" type="text/javascript"></script>
-        <script src="assets/js/vendor/fancy_func.js" type="text/javascript"></script>
-    </body>
-</html>
+            <!-- VENDOR JS -->
+            <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+            <script src="assets/js/vendor/jquery.validate.js"></script>
+            <script src="assets/js/vendor/jquery.placeholder.js"></script>
+            <script src="assets/js/vendor/jquery.tweet.min.js"></script>
+            <script src="assets/js/vendor/jquery.bxslider.min.js"></script>
+            <script src="assets/js/vendor/quantity-bt.js"></script>
+            <script src="assets/js/vendor/retina.js"></script>
+            <script src="assets/js/vendor/owl.carousel.min.js"></script>
+            <script src="assets/js/vendor/functions.js"></script>
+            <!-- FANCYBOX -->
+            <script src="assets/js/vendor/fancybox/source/jquery.fancybox.pack.js?v=2.1.4" type="text/javascript"></script>
+            <script src="assets/js/vendor/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.5" type="text/javascript"></script>
+            <script src="assets/js/vendor/fancy_func.js" type="text/javascript"></script>
+        </body>
+    </html>
