--- a/steps.html
+++ b/steps.html
@@ -59,21 +59,18 @@
                               <div class="progress-bar"></div>
                           </div>
                           <a href="#" class="bs-wizard-dot"></a>
-                          <!-- <div class="bs-wizard-info text-center">Lorem ipsum dolor sit amet.</div> -->
                         </div>
                         
                         <div class="col-xs-4 bs-wizard-step active">
                           <div class="text-center bs-wizard-stepnum">Tell us more</div>
                           <div class="progress"><div class="progress-bar"></div></div>
                           <a href="#" class="bs-wizard-dot"></a>
-                          <!-- <div class="bs-wizard-info text-center">Nam mollis tristique erat vel tristique. Aliquam erat volutpat. Mauris et vestibulum nisi. Duis molestie nisl sed scelerisque vestibulum. Nam placerat tristique placerat</div> -->
                         </div>
                         
                         <div class="col-xs-4 bs-wizard-step disabled">
                           <div class="text-center bs-wizard-stepnum">Compare options</div>
                           <div class="progress"><div class="progress-bar"></div></div>
                           <a href="#" class="bs-wizard-dot"></a>
-                          <!-- <div class="bs-wizard-info text-center">Integer semper dolor ac auctor rutrum. Duis porta ipsum vitae mi bibendum bibendum</div> -->
                         </div>
                     </div>
                 </div>
@@ -82,7 +79,7 @@
                 <!-- Start Survey container -->
                 <div id="survey_container">
                     <form name="loan-form" id="wrapped" action="send-action" method="POST">
-                        <div id="middle-wizard">
+                        <div id="middle-wizard" class="step-box">
                             <div class="step">
                                 <ul class="progress-arrows">
                                     <li class="active"><a>Business Income</a></li>
