add first marketing draft

--- a/business-analysis-report.html
+++ b/business-analysis-report.html
@@ -36,7 +36,7 @@
             <script src="assets/js/vendor/respond.min.js"></script>
         </head>
         <body>
-            <section id="top-area" class="striped-bg">
+            <section id="top-area" class="market-bg">
                 <header>
                     <!-- Navigation -->
                     <nav class="navbar navbar-default" role="navigation">
@@ -110,12 +110,29 @@
                         <!-- /.container -->
                     </nav>
                 </header>
-                <div class="cta-hero">
+                <div class="container">
+                    <div class="marketing-hero row">
+                    <div class="col-sm-7 col-md-6 img-container hidden-xs">
+                        <img src="assets/img/report.png" class="img-responsive img-overlay" alt="business analysis report">
+                    </div>
+                    <div class="col-xs-12 col-sm-5 col-md-6">
+                        <div class="row">
+                            <h2>Business Analysis Report</h2>
+                            <p>The proprietary Sageworks Business Analysis Report provides an overall measure of the creditworthiness of your business as compared to your industry peers. It serves as a good indication of the business’s ability to take on and repay debt.</p>
+                        </div>
+                        <div class="row">
+                            <div class="marketing-btn-group">
+                                <a href="steps-analysis.aspx" role="button" class="btn button-large">Generate Full <br>Analysis Report</a>
+                                <a href="loantypes.aspx" role="button" class="btn button-large">Generate Report <br>and Find a Loan</a>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
                 </div>
             </section>
-            <section id="main-area" class="striped-bg">`
+            <section id="main-area" class="market-secondary striped-bg">`
                 <div class="cta-hero">
-                    <h2>Sageworks Lending understands your<br>Business needs.</h2>
+                    <h2>Loansage understands your Business needs.</h2>
                     <a href="how-we-help.html" title="how we help">See how we can help!</a>
                 </div>
             </section>
