--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </section>
-            <section id="main-area" class="striped-bg">`
+            <section id="main-area" class="striped-bg">
                 <div class="cta-hero">
                     <h2>Sageworks Lending understands your<br>Business needs.</h2>
                     <a href="how-we-help.html" title="how we help">See how we can help!</a>
